[gd_scene load_steps=5 format=3 uid="uid://brdrqgj1h5eqf"]

[ext_resource type="Script" uid="uid://bdh4uvw2o7dlw" path="res://scenes/menu/menu.gd" id="1_037ec"]
[ext_resource type="PackedScene" uid="uid://b8q485si5chg3" path="res://scenes/ui/currency.tscn" id="1_mcvr8"]
[ext_resource type="PackedScene" uid="uid://dcbky1nanpur1" path="res://scenes/ui/buttons/settings_button.tscn" id="2_e0arn"]
[ext_resource type="Texture2D" uid="uid://c0ciuroifyq1b" path="res://resources/back.png" id="2_y1o0p"]

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_037ec")

[node name="UIRoot" type="Control" parent="."]
custom_minimum_size = Vector2(648, 1152)
layout_mode = 3
anchors_preset = 0
offset_right = 648.0
offset_bottom = 1152.0

[node name="Background" type="Sprite2D" parent="UIRoot"]
scale = Vector2(0.5581597, 1.2607844)
texture = ExtResource("2_y1o0p")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="UIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Story" type="Button" parent="UIRoot/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Играть"

[node name="Log" type="Button" parent="UIRoot/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Debug
"

[node name="Settings" type="Button" parent="UIRoot"]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 32.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 63.0
text = "Настройки"

[node name="MetaCoins" type="VBoxContainer" parent="UIRoot"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 500.0
offset_bottom = 157.0
theme_override_constants/separation = 5

[node name="MetaCoinsLabel" parent="UIRoot/MetaCoins" instance=ExtResource("1_mcvr8")]
layout_mode = 2

[node name="SettingsButton" parent="UIRoot" instance=ExtResource("2_e0arn")]
layout_mode = 1
offset_left = -90.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = 88.0

[connection signal="pressed" from="UIRoot/CenterContainer/VBoxContainer/Log" to="." method="_on_log_pressed"]
